src/test/deca/context/invalid/created/rule0.1/unknown_identifier.deca
// Résultat erreur:
//    15:12
//    identificateur non déclaré (règle 0.1)
//
// Description:
//    tests de programme incorrect contextuellement (identificateur inconnu)
//
// Auteur:
//    Jules
//
// Historique:
//    cree le 13/01/2024

{
    println(i);
}